# forma

./: .gitignore  CHANGELOG.md  CLEANUP_TASKS.md  CODE_REVIEW_V2_REPORT.md  CODE_REVIEW_V4_POST_SPRINT17.md  CODE_REVIEW_V5_POST_SPRINT18.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  INTEGER_TYPES_IMPLEMENTATION.md  KNOWN_LIMITATIONS.md  PRODUCTION_READINESS.md  QUICK_WINS_IMPLEMENTATION.md  README.md  RELEASE_V1_CHECKLIST.md  SPRINT_14_5_ASYNC_JSON_FIX.md  SPRINT_14_FINAL_FIXES.md  SPRINT_17_STABILITY.md  SPRINT_18_ROBUSTNESS.md  SPRINT_21_PATTERN_FIX.md  STDLIB_EXPANSION.md  todos.db
.github/workflows/: ci.yml
bootstrap/: interp.aria  lower.aria  mir.aria  test_bootstrap.aria
bootstrap/legacy/: lexer_combined.forma  lexer_simple_combined.forma  parser.forma  scanner.forma  scanner_simple.forma  scanner_v2.forma  test_lexer.forma  test_lexer_simple.forma  type_checker.forma
docs/: WHY_FORMA.md  ai-reference.md  reference.md
editors/vscode/: README.md  language-configuration.json  package.json
examples/: async_downloader.forma  async_parallel.forma  comprehensive.ar  comprehensive.forma  factorial.aria  fibonacci.aria  gcd.aria  hello.ar  hello.aria  hello.forma  isprime.aria  simple.ar  sum.aria
examples/showcase/: 01_hello_world.forma  02_fizzbuzz.forma  03_99_bottles.forma  04_factorial.forma  05_fibonacci.forma  06_primes.forma  07_gcd_lcm.forma  08_hanoi.forma  09_nqueens.forma  10_quicksort.forma  11_binary_search.forma  12_linked_list.forma  13_binary_tree.forma  14_sudoku.forma  15_matrix_mult.forma  16_game_of_life.forma  17_verified_sort.forma  17a_error_handling.forma  18_verified_stack.forma  19_verified_math.forma  20_verification_demo.forma  README.md  verify_all.sh
planning/analysis/: COMPARISON_ANALYSIS.md  FINAL_GAP_ANALYSIS.md  FULL_VERIFICATION.md  GAP_ANALYSIS.md  GOAL_ANALYSIS.md  KNOWN_LIMITATIONS.md  KNOWN_LLVM_ISSUES.md  POLISH_INSTRUCTIONS.md  PRODUCTION_READINESS.md  README_DRAFT.md  STATUS_REPORT.md
planning/design/: DOCUMENTATION_PLAN.md  FORMA_RUNTIME_DESIGN.md  FORMA_V2_COMPLETE_FIX_PLAN.md  FORMA_V3_DESIGN.md  MEMORY_SAFETY_DESIGN.md  SELF_HOSTING_PLAN.md  SELF_HOSTING_PLAN_EXPANDED.md
planning/reviews/: CODE_REVIEW_FINAL.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_V3_REPORT.md  CODE_REVIEW_V6_COMPREHENSIVE.md  CODE_REVIEW_V7_POST_SPRINT20.md  CODE_REVIEW_V8_RELEASE_READY.md
runtime/: Cargo.toml
runtime/src/: env.rs  (+9 more)
scripts/: bench_optimize.sh  builtin_coverage.sh  test_contracts.sh  verify_v1.sh
src/: lib.rs  main.rs
std/: core.forma  datetime.forma  io.forma  iter.forma  map.forma  prelude.forma  string.forma  vec.forma
stdlib/: core.aria  core.forma  json.forma  map.forma  string.forma
tests/: borrow_tests.rs  cli_tests.rs  contextual_keyword_tests.rs  error_tests.rs  fmt_tests.rs  lexer_tests.rs  parser_tests.rs  type_tests.rs
(+114 files in other folders)
