[package]
name = "forma"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
ariadne = "0.4"
logos = "0.14"
codespan-reporting = "0.11"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rustyline = "14"

# LLVM backend (optional, requires LLVM installed)
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }

[features]
default = []
llvm = ["inkwell"]

[dev-dependencies]
pretty_assertions = "1.4"
