[package]
name = "forma"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
ariadne = "0.4"
logos = "0.14"
codespan-reporting = "0.11"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "14"
tokio = { version = "1", features = ["full"] }
# HTTP server
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# LLVM backend (optional, requires LLVM installed)
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }

[features]
default = []
llvm = ["inkwell"]

[dev-dependencies]
pretty_assertions = "1.4"
