[package]
name = "forma"
version = "0.1.0"
edition = "2024"
description = "An AI-optimized programming language with memory safety, minimal syntax, and grammar-constrained generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sfw/forma"
homepage = "https://github.com/sfw/forma"
readme = "README.md"
keywords = ["programming-language", "compiler", "ai", "memory-safety"]
categories = ["compilers", "development-tools"]

[dependencies]
thiserror = "1.0"
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "14"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# LSP server
tower-lsp = "0.20"
async-trait = "0.1"
# TLS support
native-tls = "0.2"
# Compression
flate2 = "1.0"
# SQLite database
rusqlite = { version = "0.32", features = ["bundled"] }

# LLVM backend (optional, requires LLVM installed)
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }

[features]
default = []
llvm = ["inkwell"]

[dev-dependencies]
tempfile = "3"
